--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "anondb",
   "version": "0.0.1",
   "license": "GPL-3.0-or-later",
-  "main": "dist/src/index.js",
-  "types": "dist/src/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "files": [
-    "dist",
-    "dist/web.js"
+    "web.js",
+    "node.js",
+    "index.js"
   ],
   "keywords": [],
   "scripts": {
     "prebuild": "shx mkdir -p dist",
     "generateTypes": "ts-node scripts/generateTypes.ts",
     "postgenerateTypes": "prettier --write src/schema.types.ts",
-    "build": "tsc --build tsconfig.build.json",
+    "build": "tsc --build tsconfig.build.json && node scripts/package",
     "strip-vendor": "cat ./dist/connectors/sqlite.d.ts | tail -n +2 | tee ./dist/connectors/sqlite.d.ts > /dev/null",
     "clean": "tsc --build tsconfig.build.json --clean && shx rm -rf coverage *.log junit.xml dist && jest --clearCache",
     "test": "sh scripts/test.sh",
