--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,10 +32,12 @@ jobs:
           command: npm ci
       - run:
           name: Test
-          command: npm run coverage && npm run badge
-      - run:
-          name: Coverage
-          command: npx tubs upload ./coverage/lcov-report
+          command: |
+            npm i -g tap-xunit
+            mkdir -p ~/reports
+            npm test | tap-xunit > ~/reports/ava.xml
+      - store_test_results:
+          path: ~/reports
       - run:
           name: Badge Purge
           command: npx camo-purge --repository https://github.com/jchancehud/anondb
