--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,9 +22,8 @@ jobs:
       - run:
           name: Test
           command: |
-            npm i -D jest-junit
-            mkdir ./reports
-            npm test -- --ci --reporters=default --reporters=jest-junit
+            npm i jest-junit
+            npm test -- --ci --runInBand --reporters=default --reporters=jest-junit
           environment:
             JEST_JUNIT_OUTPUT_DIR: ./reports/
       - store_test_results:
