--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,14 +23,11 @@ jobs:
           name: Test
           command: |
             npm i jest-junit
-            mkdir -p reports/junit
             npm test -- --ci --runInBand --reporters=default --reporters=jest-junit
           environment:
-            JEST_JUNIT_OUTPUT_DIR: ./reports/junit/
+            JEST_JUNIT_OUTPUT_DIR: ./reports/
       - store_test_results:
-          path: ./reports
-      - store_artifacts:
-          path: ./reports
+          path: ./reports/
   test_and_upload:
     machine:
       image: ubuntu-2004:202010-01
@@ -42,11 +39,14 @@ jobs:
       - run:
           name: Test
           command: |
-            npm i -g tap-xunit
-            mkdir -p ~/reports
-            npm test | tap-xunit > ~/reports/ava.xml
+            npm i jest-junit
+            npm run coverage -- --ci --runInBand --reporters=default --reporters=jest-junit
+            npm run badge
       - store_test_results:
           path: ~/reports
+      - run:
+          name: Upload Coverage
+          command: npm run upload
       - run:
           name: Badge Purge
           command: npx camo-purge --repository https://github.com/jchancehud/anondb
