fix: set nodejs version in ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,12 +10,26 @@ workflows:
           filters:
             branches:
               only: main
+
+step_defs:
+    - run: &node_version
+          name: Set Node version
+          command: |
+              nvm install v16
+              nvm alias default v16
+              echo "nvm use default" >> $BASH_ENV
+    - run: &check_version
+          name: Check Node version
+          command: node -v | grep v16
+
 jobs:
   test_only:
     machine:
       image: ubuntu-2004:202010-01
     steps:
       - checkout
+      - run: *node_version
+      - run: *check_version
       - run:
           name: Install
           command: npm ci
@@ -33,6 +47,8 @@ jobs:
       image: ubuntu-2004:202010-01
     steps:
       - checkout
+      - run: *node_version
+      - run: *check_version
       - run:
           name: Install
           command: npm ci
