--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "outDir": "./dist",
     "baseUrl": "",
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "removeComments": true,
