--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "prebuild": "shx mkdir -p dist",
     "generateTypes": "ts-node scripts/generateTypes.ts",
     "postgenerateTypes": "prettier --write src/schema.types.ts",
-    "build": "tsc --build tsconfig.build.json && node scripts/package",
+    "build": "tsc --build tsconfig.json && node scripts/package",
     "strip-vendor": "cat ./dist/connectors/sqlite.d.ts | tail -n +2 | tee ./dist/connectors/sqlite.d.ts > /dev/null",
-    "clean": "tsc --build tsconfig.build.json --clean && shx rm -rf coverage *.log junit.xml dist && jest --clearCache",
+    "clean": "tsc --build tsconfig.json --clean && shx rm -rf coverage *.log junit.xml dist && jest --clearCache",
     "test": "sh scripts/test.sh",
     "test:trace": "LOG_LEVEL=trace PRINT_LOG=true npm run test",
     "coverage": "sh scripts/test.sh --coverage",
