--- a/anondb/Cargo.toml
+++ b/anondb/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [lib]
 
 [dependencies]
-serde = { version = "1", features = ["derive"] }
+serde = { workspace = true, features = ["derive"] }
 serde_bytes = "0.11.17"
 byteorder = "1"
 log = "0.4.28"
@@ -16,5 +16,9 @@ rmp-serde = "1.3.0"
 rmpv = "1"
 
 anyhow = { workspace = true }
-anondb-macros = { workspace = true }
 anondb-kv = { workspace = true }
+
+[dev-dependencies]
+anondb-macros = { workspace = true }
+
+
