wip: functional index accelerated queries

--- a/anondb-kv/Cargo.toml
+++ b/anondb-kv/Cargo.toml
@@ -13,4 +13,5 @@ redb = ["dep:redb"]
 anyhow = { workspace = true }
 serde = { workspace = true }
 
+flume = "0"
 redb = { version = "2.6.3", optional = true }
