--- a/anondb/Cargo.toml
+++ b/anondb/Cargo.toml
@@ -10,6 +10,7 @@ serde = { workspace = true, features = ["derive"] }
 serde_bytes = "0.11.17"
 byteorder = "1"
 log = "0.4.28"
+itertools = "0"
 
 rmp = "0.8.14"
 rmp-serde = "1.3.0"
