chore: Rust MSRV, dependence cleanup

--- a/anondb-kv/Cargo.toml
+++ b/anondb-kv/Cargo.toml
@@ -2,6 +2,7 @@
 name = "anondb-kv"
 version = "0.1.0"
 edition = "2024"
+rust-version = "1.85"
 
 [lib]
 
@@ -12,8 +13,8 @@ redb = ["dep:redb"]
 [dependencies]
 anyhow = { workspace = true }
 serde = { workspace = true }
+log = { workspace = true }
 
-flume = "0"
 redb = { version = "2.6.3", optional = true }
 
 [dev-dependencies]
