--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ members = ["anondb", "anondb-kv", "anondb-macros"]
 
 [workspace.dependencies]
 anyhow = "1"
-serde = { version = "1" }
+serde = "1"
+log = "0"
 
 anondb = "0"
 anondb-macros = "0"
