--- a/anondb/Cargo.toml
+++ b/anondb/Cargo.toml
@@ -2,16 +2,15 @@
 name = "anondb"
 version = "0.1.0"
 edition = "2024"
+rust-version = "1.85"
 
 [lib]
 
 [dependencies]
 serde = { workspace = true, features = ["derive"] }
-serde_bytes = "0.11.17"
-byteorder = "1"
-log = "0.4.28"
-itertools = "0"
+log = { workspace = true }
 
+serde_bytes = "0.11.17"
 rmp = "0.8.14"
 rmp-serde = "1.3.0"
 rmpv = "1"
