--- a/anondb-kv/Cargo.toml
+++ b/anondb-kv/Cargo.toml
@@ -18,4 +18,7 @@ log = { workspace = true }
 redb = { version = "2.6.3", optional = true }
 
 [dev-dependencies]
-rand = "0"
+rand = { workspace = true }
+rstest = "0"
+paste = "1"
+domacro = "0"
