chore: update package metadata, remove dup cargo lock

--- a/anondb-kv/Cargo.toml
+++ b/anondb-kv/Cargo.toml
@@ -3,6 +3,9 @@ name = "anondb-kv"
 version = "0.1.0"
 edition = "2024"
 rust-version = "1.85"
+license = "MIT OR Apache-2.0"
+description = "anondb kv traits and backend implementations"
+repository = "https://github.com/chancehudson/anondb.git"
 
 [lib]
 
