--- a/anondb/Cargo.toml
+++ b/anondb/Cargo.toml
@@ -3,6 +3,9 @@ name = "anondb"
 version = "0.1.0"
 edition = "2024"
 rust-version = "1.85"
+license = "MIT OR Apache-2.0"
+description = "Database abstraction over a generic KV"
+repository = "https://github.com/chancehudson/anondb.git"
 
 [lib]
 
